--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ fastapi==0.115.13
 filelock==3.18.0
 fonttools==4.58.4
 fsspec==2025.5.1
+h11==0.16.0
 hf-xet==1.1.5
 idna==3.10
 ipykernel==6.29.5
@@ -50,6 +51,7 @@ pydantic_core==2.33.2
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==27.0.0
@@ -70,4 +72,5 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.34.3
 wcwidth==0.2.13
